feat: Implementar nuevo flujo para la gestión de solicitudes de Paz y Salvo. Se actualizan métodos para subir documentos, aprobar y rechazar solicitudes, y se introduce un nuevo endpoint para generar documentos. Se mejora la interfaz de usuario y se optimiza la lógica de carga y asociación de documentos, mejorando la experiencia del usuario en el proceso de gestión de solicitudes.

--- a/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
@@ -15,7 +15,8 @@
         [archivos]="archivosActuales"
         (archivosChange)="onArchivosChange($event)"
         [reset]="resetFileUpload"
-        [archivosExclusivos]="archivosExclusivos">
+        [archivosExclusivos]="archivosExclusivos"
+        [proceso]="'paz-salvo'">
       </app-file-upload>
 
       <div class="enviar-solicitud mt-4">
