--- a/src/app/pages/secretaria/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/secretaria/paz-salvo/paz-salvo.component.html
@@ -41,7 +41,7 @@
           [template]="template"
           [proceso]="'paz-salvo'"
           [loading]="loading"
-          (generarDocumento)="onGenerarDocumento($event)"
+          (generarDocumento)="generarDocumentoPazSalvo($event)"
           (cancelar)="onCancelarGeneracion()"
           (tengoDocumento)="onTengoDocumento()">
         </app-document-generator>
