--- a/src/app/pages/funcionario/modulo-estadistico/modulo-estadistico.component.html
+++ b/src/app/pages/funcionario/modulo-estadistico/modulo-estadistico.component.html
@@ -1,1 +1,19 @@
-<p>modulo-estadistico works!</p>
+<div class="modulo-estadistico-container">
+  <mat-tab-group>
+    <mat-tab label="Dashboard Estadístico">
+      <app-dashboard-estadistico></app-dashboard-estadistico>
+    </mat-tab>
+    <mat-tab label="Reportes">
+      <div class="tab-content">
+        <h2>Reportes</h2>
+        <p>Funcionalidad de reportes en desarrollo...</p>
+      </div>
+    </mat-tab>
+    <mat-tab label="Exportar Datos">
+      <div class="tab-content">
+        <h2>Exportar Datos</h2>
+        <p>Funcionalidad de exportación en desarrollo...</p>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
