--- a/src/app/pages/funcionario/modulo-estadistico/dashboard-estadistico.component.html
+++ b/src/app/pages/funcionario/modulo-estadistico/dashboard-estadistico.component.html
@@ -17,8 +17,8 @@
           Actualizar datos
         </button>
         <button mat-raised-button color="accent" (click)="exportarPDF()" [disabled]="loading || !resumenCompleto">
-          <mat-icon>picture_as_pdf</mat-icon>
-          Exportar PDF
+          <mat-icon>description</mat-icon>
+          Exportar Reporte
         </button>
         <button mat-raised-button color="warn" (click)="exportarExcel()" [disabled]="loading || !resumenCompleto">
           <mat-icon>table_chart</mat-icon>
